Further describe the Ganot operon

--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -189,14 +189,17 @@ bp_pair_analysis(coa$Osa_Oki, coa$Osa_Aom, win = 1000, lab = "Oki~Aom") |> plotH
 ### Notes about operons
 
 The operon of [Ganot et al., 2004](https://journals.asm.org/doi/10.1128/MCB.24.17.7795-7805.2004)
-appears to be conserved in OKI and OSA.  In the annotation visible in ZENBU
-and NCBI:
+appears to be conserved in OKI and OSA (near `OSKA2016v1.9::PAR:10984831-10995276`).
+In the annotation visible in ZENBU and NCBI:
 
- - Centrosomal protein POC5 is in the second half `Oidioi.mRNA.OKI2018_I69.PAR.g12978`,
-   downstream of a CAGE TSS promoter. (Not reported in Ganot et al., 2004).
-   `g10133 (PAR:10985271..10985910+)` in OSKA2016v1.9 also has a transcription start
-   site and no trans-splicing site.
+ - `Oidioi.mRNA.OKI2018_I69.PAR.g12978` is the most likely start of the Ganot operon as
+   it starts downstream of a CAGE TSS peak and has no trans-splicing site.  It is
+   homologous to `g10133 (PAR:10985271..10985910+)` in OSKA2016v1.9 which also has a
+   transcription start site and no trans-splicing site.  Best Norwegian hit is `CBY19033`.
+   Gene name is unclear but weaker blast hits suggest _centrosomal POC5 isoform X1_.
  - IQ domain-containing protein K isoform X2 is `Oidioi.mRNA.OKI2018_I69.PAR.g12977`
+   and is `g10134` in OSKA2016.  It has a bona fide trans-splicing site in both genomes.
+   It is `CBY19034` in Norway.
    (Not reported in Ganot et al., 2004).
  - Ran binding protein 16 is `Oidioi.mRNA.OKI2018_I69.PAR.g12976`. (First member
    of the operon of Ganot et al., 2004).  In the current annotation of the OSKA2016v1.9
