Further describe the Ganot operon

--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -199,12 +199,12 @@ In the annotation visible in ZENBU and NCBI:
    Gene name is unclear but weaker blast hits suggest _centrosomal POC5 isoform X1_.
  - IQ domain-containing protein K isoform X2 is `Oidioi.mRNA.OKI2018_I69.PAR.g12977`
    and is `g10134` in OSKA2016.  It has a bona fide trans-splicing site in both genomes.
-   It is `CBY19034` in Norway.
-   (Not reported in Ganot et al., 2004).
+   It is `CBY19034` in Norway. (Not reported in Ganot et al., 2004).
  - Ran binding protein 16 is `Oidioi.mRNA.OKI2018_I69.PAR.g12976`. (First member
    of the operon of Ganot et al., 2004).  In the current annotation of the OSKA2016v1.9
-   genome, the gene is missed, but a blastx search in region `PAR:10986742..10988032+`
-   finds it. 
+   genome, `g10135` matches well but misses the N-terminal part. Nevertheless a blastx
+   search in region `PAR:10986742..10988032+` finds it.  In line with this, there is
+   a trans-splicing site upstream the unannotated area.
  - Dynein light chain is `Oidioi.mRNA.OKI2018_I69.PAR.g12975`.
  - Delta tubulin is `Oidioi.mRNA.OKI2018_I69.PAR.g12974`.
  - MBF is `Oidioi.mRNA.OKI2018_I69.PAR.g12973`.
