Further description of the Ganot operon.

--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -200,15 +200,15 @@ In the annotation visible in ZENBU and NCBI:
  - IQ domain-containing protein K isoform X2 is `Oidioi.mRNA.OKI2018_I69.PAR.g12977`
    and is `g10134` in OSKA2016.  It has a bona fide trans-splicing site in both genomes.
    It is `CBY19034` in Norway. (Not reported in Ganot et al., 2004).
- - Ran binding protein 16 is `Oidioi.mRNA.OKI2018_I69.PAR.g12976`. (First member
-   of the operon of Ganot et al., 2004).  In the current annotation of the OSKA2016v1.9
+ - Exportin 7 is `Oidioi.mRNA.OKI2018_I69.PAR.g12976`. (First member
+   of the operon of Ganot et al., 2004, which calls it Ran-binding protein 16).  In the current annotation of the OSKA2016v1.9
    genome, `g10135` matches well but misses the N-terminal part. Nevertheless a blastx
    search in region `PAR:10986742..10988032+` finds it.  In line with this, there is
    a trans-splicing site upstream the unannotated area.
  - Dynein light chain is `Oidioi.mRNA.OKI2018_I69.PAR.g12975`.
  - Delta tubulin is `Oidioi.mRNA.OKI2018_I69.PAR.g12974`.
- - MBF is `Oidioi.mRNA.OKI2018_I69.PAR.g12973`.
- - CycD is `Oidioi.mRNA.OKI2018_I69.PAR.g12972`. Polyadenylation signal conserved.
+ - _MBF_ is `Oidioi.mRNA.OKI2018_I69.PAR.g12973`.  Also called _enthelial differenciation-related factor 1_ in other species.
+ - CycD is `Oidioi.mRNA.OKI2018_I69.PAR.g12972` and `g10138` in OSKA. Polyadenylation signal conserved.
  
 (Note that the transcripts IDs here differ from the public ones.)
 
