fix Oki gene label

--- a/vignettes/PAC3.Rmd
+++ b/vignettes/PAC3.Rmd
@@ -502,7 +502,7 @@ ganot_bar_loc   <- GRanges(unique(seqnames(ganot_bar_genes)), ranges=IRanges(sta
 
 # Some manual annotations to make things nicer to look at.
 oki_seg <- gr2dna_seg(ganot_oki_genes |> GenomicBreaks::reverse())
-oki_seg$name <- c('g12994', 'cycDc\ng12997', 'MBF1\ng12998', 'Dtu\ng12999', 'DynL\ng13000', 'RBP16\ng13001', 'IQCK\ng13002', 'POC5*\ng13003*', 'g13004')
+oki_seg$name <- c('g12994', 'cycDc\ng12997', 'MBF1\ng12998', 'Dtu\ng12999', 'DynL\ng13000', 'RBP16\ng13001', 'IQCK\ng13002', 'POC5*\ng13003*', 'PDCL3\ng13004')
 oki_seg$fill <- '#d9d9d9'
 oki_seg$fill[2:8] <- palette("Set2")[1:7] |> rev()
 #oki_seg$fill[98]   <- "#d9d9d9"
